--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   "homepage": "https://github.com/cjegeonu/cards#readme",
   "devDependencies": {
     "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
     "eslint": "^9.17.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
+    "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
